fix: align dev icone

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -243,7 +243,6 @@ section{
     margin-top: 167px;
     color: white;
     gap: 100px;
-    border: 1px solid white;
   }
 
 
@@ -259,7 +258,6 @@ section{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border: 1px solid white;
     align-items: center;
   }
 
@@ -278,9 +276,26 @@ section{
   .logos-img{
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 60px;
+    margin-top: 90px;
+  }
 
+  .dev-all{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 110px;
+  }
+  .dev-all >h4{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 24px ;
+  }
 
+  .dev-atualmente{
+    display: flex;
+    gap: 60px;
+    padding-top: 80px;
   }
 
 
